<?xml version="1.0"?>
<package format="2">
  <name>rh_p12_rn_base_module</name>
  <version>0.1.0</version>
  <description>
    Base module using ROBOTIS framework for RH-P12-RN
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/rh_p12_rn_base_module</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/rh_p12_rn/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/RH-P12-RN</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/RH-P12-RN/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>rh_p12_rn_base_module_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>dynamixel_sdk</depend>
  <depend>robotis_controller</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>boost</depend>
</package>
