<?xml version="1.0"?>
<package>
  <name>rh_p12_rn_base_module_msgs</name>
  <version>0.1.0</version>
  <description>
    Message and service types: custom messages and services for RH-P12-RN packages
  </description>
  <license>Apache License 2.0</license>
  <author email="zerom@robotis.com">zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
