<?xml version="1.0"?>
<package format="2">
  <name>rh_p12_rn_base_module_msgs</name>
  <version>0.1.0</version>
  <description>
    This package includes ROS messages and services for the rh_p12_rn packages
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/rh_p12_rn_base_module_msgs</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/rh_p12_rn/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/RH-P12-RN</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/RH-P12-RN/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
