<?xml version="1.0"?>
<package>
  <name>rh_p12_rn_description</name>
  <version>0.0.0</version>
  <description>The rh_p12_rn_description package</description>
  <license>BSD</license>
  <author email="sch@robotis.com">sch</author>
  <maintainer email="zerom@robotis.com">zerom</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
