<?xml version="1.0"?>
<package format="2">
  <name>rh_p12_rn_gazebo</name>
  <version>0.1.0</version>
  <description>
    The rh_p12_rn_gazebo package
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/rh_p12_rn_gazebo</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/rh_p12_rn/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/RH-P12-RN</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/RH-P12-RN/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
