<?xml version="1.0"?>
<package format="2">
  <name>rh_p12_rn_gui</name>
  <version>0.1.0</version>
  <description>
    This package provides GUI interface to control the RH-P12-RN
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/rh_p12_rn_gui</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/rh_p12_rn/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/RH-P12-RN</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/RH-P12-RN/issues</url>>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>rh_p12_rn_base_module_msgs</depend>
  <depend>qtbase5-dev</depend>
  <depend>qt5-qmake</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
</package>
