<?xml version="1.0"?>
<package>
  <name>rh_p12_rn_manager</name>
  <version>0.1.1</version>
  <description>The rh_p12_rn_manager package</description>
  <license>Apache License 2.0</license>
  <author email="zerom@robotis.com">zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <!--url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-OP3</url>
  <url type="website">http://wiki.ros.org/robotis_op3</url-->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>rh_p12_rn_base_module</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamixel_sdk</run_depend>
  <run_depend>robotis_framework_common</run_depend>
  <run_depend>robotis_device</run_depend>
  <run_depend>robotis_controller</run_depend>
  <run_depend>robotis_controller_msgs</run_depend>
  <run_depend>rh_p12_rn_base_module</run_depend>
  <run_depend>cmake_modules</run_depend>
</package>
