<?xml version="1.0"?>
<package format="2">
  <name>rh_p12_rn_manager</name>
  <version>0.1.0</version>
  <description>
    The rh_p12_rn_manager package
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/rh_p12_rn_manager</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/rh_p12_rn/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/RH-P12-RN</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/RH-P12-RN/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>robotis_controller_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_depend>robotis_framework_common</build_depend>
  <build_depend>robotis_device</build_depend>
  <build_depend>robotis_controller</build_depend>
  <build_depend>rh_p12_rn_base_module</build_depend>
</package>
